third_party/move/move-compiler-v2/tests/more-v1/parser/byte_string_token_eof1.exp

Diagnostics:
error: invalid byte string
  ┌─ tests/more-v1/parser/byte_string_token_eof1.move:3:9
  │
3 │         b"diem\"
  │         ^^^^^^^^ Missing closing quote (") after byte string
